# CorporateSystems-KR1

./: CMakeLists.txt  README.md
KR1/: hello.cpp  hello.h
include/: maze.h
src/: main.cpp  maze.cpp  ui.cpp
tests/: test_generators.cpp  test_main.cpp  test_maze.cpp  test_pathfinders.cpp  test_scenarios.cpp
